terceiro commit do CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Feedback</title> 
 </head>
 <body>
-    <div class="card">
+    <div class="Card">
         <div class="estrela">
             <img src="./images/icon-star.svg" alt="ícone de uma estrela laranja">
         </div>    
@@ -31,4 +31,5 @@
         <button>Enviar</button>
     </div>
 </body>
+
 </html>
